--- a/app/styles/components/orders.css
+++ b/app/styles/components/orders.css
@@ -2,15 +2,20 @@
     border-radius: 4px;
 }
 
-.orders-item {
+.orders-item,
+.orders-item-wrapper {
     display: flex;
     flex-direction: column;
+}
+
+.orders-item-wrapper {
     padding: 20px 20px 10px 20px;
+    max-width: 400px;
+    margin: 0px auto
 }
 
 .order-item-stopped {
     opacity: .5;
-    pointer-events: none
 }
 
 
@@ -127,6 +132,7 @@
     display: none;
 }
 
+
 .orders-item-details-meta-more-data {
     display: flex;
     flex-direction: column;
@@ -134,15 +140,6 @@
     flex-grow: 1
 }
 
-.orders-item-details-meta-more button:first-of-type {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
-.orders-item-details-meta-more button:last-of-type {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
 
 .order-stop {
     padding: 5px 5px 5px 10px;
@@ -152,4 +149,11 @@
     width: 10px;
     height: 10px;
     fill: #000
+}
+
+
+/* STATES */
+
+.orders-item:hover .orders-item-details-meta-more {
+    display: flex
 }
